<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:gravity="center"
    android:orientation="vertical" >

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/common_footer_divider_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/common_footer_rlyt_homepage"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center_vertical" >

            <ImageView
                android:id="@+id/common_footer_iv_homepage"
                android:layout_width="27dp"
                android:layout_height="21dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/common_footer_homepage_normal" />

            <TextView
                android:id="@+id/common_footer_txt_homepage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/common_footer_iv_homepage"
                android:layout_centerHorizontal="true"
                android:text="@string/common_footer_tv_homepage_str"
                android:textColor="@color/white_color"
                android:textSize="10sp" />
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/common_footer_rlyt_news"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center_vertical" >

            <ImageView
                android:id="@+id/common_footer_iv_news"
                android:layout_width="27dp"
                android:layout_height="21dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/common_footer_news_normal" />

            <TextView
                android:id="@+id/common_footer_txt_news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/common_footer_iv_news"
                android:layout_centerHorizontal="true"
                android:text="@string/common_footer_tv_news_str"
                android:textColor="@color/white_color"
                android:textSize="10sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/common_footer_rlyt_course"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center_vertical" >

            <ImageView
                android:id="@+id/common_footer_iv_course"
                android:layout_width="27dp"
                android:layout_height="21dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/common_footer_course_normal" />

            <TextView
                android:id="@+id/common_footer_txt_course"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/common_footer_iv_course"
                android:layout_centerHorizontal="true"
                android:text="@string/common_footer_tv_course_str"
                android:textColor="@color/white_color"
                android:textSize="10sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/common_footer_rlyt_community"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center_vertical"
            android:visibility="gone" >

            <ImageView
                android:id="@+id/common_footer_iv_community"
                android:layout_width="27dp"
                android:layout_height="21dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/common_footer_community_ico" />

            <TextView
                android:id="@+id/common_footer_txt_community"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/common_footer_iv_community"
                android:layout_centerHorizontal="true"
                android:text="@string/common_footer_tv_community_str"
                android:textColor="@color/white_color"
                android:textSize="10sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/common_footer_rlyt_advanced"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center_vertical" >

            <ImageView
                android:id="@+id/common_footer_iv_advanced"
                android:layout_width="27dp"
                android:layout_height="21dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/common_footer_tongxuepai_normal" />

            <TextView
                android:id="@+id/common_footer_txt_advanced"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/common_footer_iv_advanced"
                android:layout_centerHorizontal="true"
                android:text="@string/common_footer_tv_advanced_str"
                android:textColor="@color/white_color"
                android:textSize="10sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/common_footer_rlyt_user"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center_vertical" >

            <ImageView
                android:id="@+id/common_footer_iv_user"
                android:layout_width="27dp"
                android:layout_height="21dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/common_footer_user_normal" />

            <TextView
                android:id="@+id/common_footer_txt_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/common_footer_iv_user"
                android:layout_centerHorizontal="true"
                android:text="@string/common_footer_tv_user_str"
                android:textColor="@color/white_color"
                android:textSize="10sp" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>