<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/common_header_llyt_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/common_header_background_color"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/common_header_rlyt_first_header"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:visibility="gone" >

        <LinearLayout
            android:id="@+id/common_first_header_llyt_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:visibility="gone" >

            <ImageView
                android:id="@+id/common_first_header_iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/common_first_header_back_ico" />

            <TextView
                android:id="@+id/common_first_header_tv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/common_header_btn_back_str"
                android:textColor="@color/white_color"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/common_first_header_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxEms="15"
            android:singleLine="true"
            android:textColor="@color/white_color"
            android:textSize="18sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/common_first_header_tv_do"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/white_color"
            android:textSize="16sp"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/common_first_header_iv_do"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/common_first_header_iv_extra"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/common_first_header_iv_do"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/common_first_header_llyt_do"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:visibility="gone" >

            <TextView
                android:id="@+id/common_first_header_tv_do_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/common_header_btn_ensure_str"
                android:textColor="@color/white_color"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/common_first_header_do_ico" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/common_header_rlyt_network"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/common_header_rlyt_network_selector"
        android:clickable="true"
        android:gravity="center_vertical"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/common_header_iv_network_remind"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="8dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/common_header_iv_network_remind" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/common_header_iv_network_remind"
            android:gravity="center_vertical"
            android:text="@string/common_header_network_remind_str"
            android:textColor="@color/white_color"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="8dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/common_first_header_do_ico" />
    </RelativeLayout>

</LinearLayout>